# Scheduler

./: .gitignore  AboutState.cpp  AboutState.h  CMakeLists.txt  DisplayGranttState.cpp  MainApp.cpp  MainApp.h  MainAppState.cpp  MainAppState.h  ParsingFile.cpp  ParsingFile.h  README.md  ScheduleAlgorithm.cpp  ScheduleFileSaving.cpp  ScheduleItem.cpp  ScheduleItem.h  SplashScreen.cpp  SplashScreen.h  TaskState.cpp  TaskState.h  Utils.h  build-emc.cmd  build.cmd  build.sh  main.cpp  parseAppData.h
.github/workflows/: deploy.yml
DearImgui/: imgui_draw.cpp  imgui_internal.h  implot_demo.h  implot_internal.h  imstb_rectpack.h  imstb_textedit.h
DearImgui/misc/freetype/: imgui_freetype.h
MyTinyGUI/: FontManager.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  UI_Button.cpp  UI_Ctexture.cpp  UI_Image.cpp  UI_Text.cpp  Window.cpp
MyTinyGUI/include/: AppState.h  AppStateMachine.h  Texture.h  Timer.h  UI_Button.h  UI_Ctexture.h  UI_Image.h  UI_Text.h  Vector2D.h  Widget.h  Widgets.h  Window.h
assets/: index.html
assets/lang/: lang_en.xml
assets/manual/: help_fr.html
docs/: astro.config.mjs  package-lock.json  package.json
imgui/: imconfig.h  imgui_demo.cpp  implot_items.cpp
imgui/old/: imgui.cpp  imgui.h  imgui_demo.cpp  implot.cpp  implot_demo.cpp  implot_demo.h
lang/: lang_en.xml  lang_fr.xml
platform/emscripten/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/windows/: CMakeLists.txt
src/: MainApp.cpp  MainApp.h  ParsingFile.cpp  ParsingFile.h  ScheduleAlgorithm.cpp  ScheduleFileSaving.cpp  Utils.h  main.cpp  parseAppData.h  utility.h
src/MyTinyGUI/: FontManager.cpp  InputManager.cpp  InputManager.h  Texture.cpp  TextureManager.cpp  Timer.cpp  UI_Button.cpp  UI_Ctexture.cpp  UI_Image.cpp  UI_Text.cpp  Window.cpp
src/MyTinyGUI/include/: AppState.h  AppStateMachine.h  FontManager.h  Texture.h  Timer.h  UI_Button.h  UI_Ctexture.h  UI_Image.h  UI_Text.h  Vector2D.h  Widget.h  Widgets.h  Window.h
src/Screens/: AboutState.cpp  AboutState.h  DisplayGranttState.cpp  MainAppState.cpp  MainAppState.h  ScheduleItem.cpp  ScheduleItem.h  SplashScreen.cpp  SplashScreen.h  TaskState.cpp  TaskState.h
src/imgui/: imconfig.h  implot_internal.h  imstb_truetype.h
src/imgui/misc/freetype/: imgui_freetype.cpp
win/: CMakeCache.txt  Makefile  cmake_install.cmake
win/lang/: lang_fr.xml
win/manual/: style.css
